--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,8 @@ pylint = "*"
 rope = "*"
 psycopg2-binary = "*"
 flask-db = "*"
+flask-socketio = "*"
+eventlet = "==0.30.2"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
